tests/ui/error-codes/e0119/issue-28981.stderr
error[E0210]: type parameter `Foo` must be used as the type parameter for some local type (e.g., `MyStruct<Foo>`)
  --> $DIR/issue-28981.rs:5:6
   |
LL | impl<Foo> Deref for Foo { }
   |      ^^^ type parameter `Foo` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0210`.
