tests/ui/error-codes/e0119/issue-28981.rs
use std::ops::Deref;

struct Foo;

impl<Foo> Deref for Foo { } //~ ERROR must be used

fn main() {}
